2019-01-31  Allen D. Ball  <ball@sol.local>

	* Removed custom annotations that have a javax.ws.rs counterpart.

	* src/main/java/ball/http/ProtocolInvocationHandler.java:
	Support interface default methods.

	* Start development of 2.0-SNAPSHOT.

2018-07-31  Allen D. Ball  <ball@sol.local>

	* pom.xml: Released version 1.0.0.

2018-07-24  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ProtocolClient.java:
	Expose Charset, JAXBContext, and ObjectMapper fields to
	sublcasses.

2018-05-23  Allen D. Ball  <ball@sol.local>

	* Made ball.http.annotation.* annotation names consistent with
	javax.ws.rs.* standards.

	* src/main/java/ball/http/ProtocolRequestBuilder.java:
	Added support for javax.ws.rs annotations.

2017-08-12  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/ProtocolResponseHandler.java:
	Handle complex protocol method return types.

2017-08-01  Allen D. Ball  <ball@sol>

	* Re-factored ProtocolClientBuilder into ProtocolClient,
	ProtocolInvocationHandler, ProtocolRequestBuilder, and
	ProtocolResponseHandler.

2017-07-29  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/URIBuilderFactory.java:
	Moved URIBuilderFactory to ball.http package.

2017-07-27  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/ProtocolInvocationHandler.java:
	Use a ResponseHandler to convert HttpResponse to protocol method
	return type.

2017-07-25  Allen D. Ball  <ball@sol>

	* Added support for @HostParameter.  Added type() member to
	protocol method annotations to specify the respective
	implementations.

2017-07-24  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/ProtocolClientBuilder.java,
	src/main/java/ball/http/ProtocolInvocationHandler.java
	(and associated Annotations and Processors):
	Initial writing.

	* src/main/java/ball/http/client/method/URIBuilderFactory.java:
	Added getInstance(URI) and getInstance(String) methods.

2017-07-23  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/annotation/URISpecification.java,