@@ -1,3 +1,8 @@
+2019-02-05  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/ball/http/ProtocolRequestBuilder.java:
+	Leverage parameter names through reflection.
+
 2019-01-31  Allen D. Ball  <ball@sol.local>
 
 	* Removed custom annotations that have a javax.ws.rs counterpart.
